.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Document__c/fields/Certificate_Type__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Certificate Type</label>
    <referenceTo>b3o__Certificate_Type__c</referenceTo>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>