.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Document__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>External_Id__c</columns>
    <columns>b3o__Document_Pack__c</columns>
    <columns>Certificate_Type__c</columns>
    <columns>b3o__Form__c</columns>
    <columns>NAME</columns>
    <columns>b3o__Allow_Editing_Submitted_Form__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>b3o__Document__c</columns>
    <columns>Document_approval_required__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>