.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Document__c/listViews/Documents_Only.listView-meta.xml
<ListView>
    <fullName>Documents_Only</fullName>
    <columns>NAME</columns>
    <columns>b3o__Allow_Editing_Submitted_Form__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>b3o__Document__c</columns>
    <columns>Document_approval_required__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>Privacy Information Statement</value>
    </filters>
    <label>Documents Only</label>
</ListView>